--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs/rxlua"]
 	path = libs/rxlua
 	url = https://github.com/bjornbytes/RxLua.git
+[submodule "libs/rxlove"]
+	path = libs/rxlove
+	url = https://github.com/bjornbytes/RxLove.git
